# spectral-clustering-graph-representations

./: LICENSE  pyproject.toml  readme.md  requirements.txt
notebooks/: graph_construction.ipynb  learned_representations.ipynb  two_moons.ipynb
notebooks/accuracies/graph_constructions/: PCAN_acc_40.npz  accuracy_eigs.csv  adaptive_spectral_vision_performance.csv  adaptive_timings.csv  biclique_accuracies.csv  biclique_k_sweep.csv  biclique_k_sweep_timings.csv  biclique_timings.csv  biclique_vision_performance.csv  graph_build_times.csv  graph_diagnostics.csv  graph_eigsolve_times.csv  knn_accuracies.csv  pcan_accuracies.csv  spectral_accuracy.csv  spectral_timings.csv
notebooks/accuracies/learned_reps/: spec_acc_summary.csv
notebooks/accuracies/learned_reps/adaptive/: adaptive_k_sweep.csv  timings_adaptive_k_sweep.csv
notebooks/accuracies/learned_reps/biclique/: biclique_k_sweep.csv  biclique_r_sweep.csv  (+2 more)
notebooks/accuracies/representation_learning/: CIFAR_epochs_simclr_pca_results.csv  CIFAR_epochs_simclr_results.csv  CIFAR_epochs_vae_results.csv  CIFAR_knn_results.csv  FMNIST_epochs_simclr_pca_results.csv  FMNIST_epochs_simclr_results.csv  FMNIST_epochs_vae_results.csv  FMNIST_knn_results.csv  MNIST_epochs_simclr_pca_results.csv  MNIST_epochs_simclr_results.csv  MNIST_epochs_vae_results.csv  MNIST_knn_results.csv
src/spectral_clustering/graphs/: __init__.py  constructors.py  kernels.py
src/spectral_clustering/metrics/: __init__.py  clustering.py
src/spectral_clustering/training/: ae_trainer.py  losses.py
src/spectral_clustering/utils/: pipelines.py
(+22 files in other folders)
